@@ -69,6 +69,8 @@ Version 0.7.4 UNRELEASED
 
   * [curses] Show feedback of forbid-version with verbose>0 (Closes: #638841)
 
+  * [curses] Require args for some commands: hold, keep... (Closes: #759520)
+
 - Internal changes:
 
   * In internal_mark_delete(), also check for auto-installability property of
